--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -1,42 +1,183 @@
+@font-face {
+  font-family: 'Unica One';
+  src: url("../fonts/UnicaOne-Regular.ttf") format("truetype"); }
+.height-300 {
+  height: 300px; }
+
+@font-face {
+  font-family: 'Unica One';
+  src: url("../fonts/UnicaOne-Regular.ttf") format("truetype"); }
+.height-300 {
+  height: 300px; }
+
+.main {
+  height: 100vh;
+  overflow-y: scroll;
+  font-family: "Unica One", "Roboto Slab", serif; }
+  .main .overlay {
+    text-align: center;
+    font-size: 1.7rem;
+    overflow: hidden; }
+    .main .overlay .darker-background {
+      width: 100%;
+      height: 100%;
+      background-color: #1a3377; }
+    .main .overlay .baseline {
+      margin-top: 250px;
+      padding: 50px 30px;
+      color: #e1b12c; }
+      .main .overlay .baseline h1 {
+        color: white;
+        font-size: 3rem; }
+    .main .overlay img {
+      width: 100%; }
+  .main .description {
+    background-color: #fff; }
+    .main .description .title {
+      margin-top: 15px;
+      font-size: 3rem;
+      color: #1a3377;
+      border-right: solid #e1b12c 15px;
+      text-align: right;
+      padding: 10px; }
+    .main .description .title-left {
+      text-align: left;
+      border-left: solid #e1b12c 15px;
+      border-right: none; }
+    .main .description .about {
+      font-family: Lato, "Roboto Slab", Serif, serif; }
+
+#landing-page-content {
+  font-family: Lato, "Roboto Slab", Roboto, serif; }
+
+.title {
+  font-family: "Unica One", "Roboto Slab", serif; }
+  .title.text-center {
+    border-right: solid #e1b12c 15px;
+    border-left: solid #e1b12c 15px; }
+
 body {
-    font-family: 'Verdana', sans-serif;
-    margin: 50px 25px;
-}
+  background: url("../imgs/bg.jpg") repeat-x top left; }
 
-a {
-    color: #2a99b6;
-}
+#sidebar {
+  height: 100vh;
+  overflow: hidden;
+  z-index: 3;
+  font-family: 'Unica One', cursive !important; }
+  #sidebar .brand {
+    padding-top: 30px;
+    padding-bottom: 30px; }
+    #sidebar .brand img {
+      max-width: 80%; }
+  #sidebar .list-group {
+    min-height: 100vh; }
+    #sidebar .list-group i {
+      margin-right: 6px; }
+  #sidebar .list-group-item {
+    border-radius: 0;
+    color: #2d3436;
+    border-left: 0;
+    border-right: 0;
+    white-space: nowrap;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    -webkit-transition: all linear .3s;
+    -moz-transition: all linear .3s;
+    -o-transition: all linear .3s;
+    transition: all linear .3s;
+    /* closed state */ }
+    #sidebar .list-group-item:first-of-type {
+      border-top: none; }
+    #sidebar .list-group-item:last-of-type {
+      border-bottom: none; }
+    #sidebar .list-group-item[aria-expanded="false"]::after {
+      content: " \f0d7";
+      font-family: FontAwesome, serif;
+      display: inline;
+      text-align: right;
+      padding-left: 5px; }
+    #sidebar .list-group-item[aria-expanded="true"]::after {
+      content: " \f0da";
+      font-family: FontAwesome, serif;
+      display: inline;
+      text-align: right;
+      padding-left: 5px; }
+    #sidebar .list-group-item:hover {
+      border-left: solid #e1b12c 10px;
+      background-color: #cca228;
+      color: white; }
 
-a:hover {
-    color: #33bbdf;
-}
+/* level 1*/
+#sidebar .list-group .collapse .list-group-item,
+#sidebar .list-group .collapsing .list-group-item {
+  padding-left: 40px; }
 
-header, footer, div.page {
-    width: 760px;
-    margin: 0 auto;
-    background: #daeef3;
-    padding: 20px 30px;
-}
+/* level 2*/
+#sidebar .list-group .collapse > .collapse .list-group-item,
+#sidebar .list-group .collapse > .collapsing .list-group-item {
+  padding-left: 60px; }
 
-header h1 {
-    color: #169bbd;
-    margin: 0;
-    font-weight: normal;
-    font-size: 42px;
-}
+/* level 3*/
+#sidebar .list-group .collapse > .collapse > .collapse .list-group-item {
+  padding-left: 90px; }
 
-header nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
+@media (max-width: 767px) {
+  #menu-icon {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    color: #1a3377;
+    background-color: #e1b12c;
+    height: 48px;
+    width: 56px;
+    text-align: center;
+    font-size: 2rem; }
 
-header nav ul li {
-    display: inline;
-    margin: 0 8px 0 0;
-    padding: 0;
-}
+  #sidebar {
+    overflow-y: auto;
+    overflow-x: visible;
+    transition: all 0.25s ease;
+    transform: translateX(-100%);
+    position: fixed;
+    /* overlay sub levels on small screens */ }
+    #sidebar.show {
+      transform: translateX(0); }
+    #sidebar::-webkit-scrollbar {
+      width: 0; }
+    #sidebar .list-group .collapse.show, #sidebar #sidebar .list-group .collapsing {
+      position: relative;
+      z-index: 1;
+      top: 0; }
 
-div.page {
-    background: #f1fbfe;
-}
+  #sidebar, #sidebar .list-group {
+    min-width: 50%;
+    overflow: visible; }
+
+  #sidebar .list-group > .list-group-item {
+    text-align: center;
+    padding: .75rem .5rem; }
+
+  /* hide caret icons of top level when collapsed */
+  #sidebar .list-group > .list-group-item[aria-expanded="true"]::after,
+  #sidebar .list-group > .list-group-item[aria-expanded="false"]::after {
+    display: none; } }
+.collapse.show {
+  visibility: visible; }
+
+.collapsing {
+  visibility: visible;
+  height: 0;
+  -webkit-transition-property: height, visibility;
+  transition-property: height, visibility;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out; }
+  .collapsing.width {
+    -webkit-transition-property: width, visibility;
+    transition-property: width, visibility;
+    width: 0;
+    height: 100%;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out; }
+
+/*# sourceMappingURL=style.css.map */
