--- a/EduCode/assets/static/helpers.scss
+++ b/EduCode/assets/static/helpers.scss
@@ -1,6 +1,7 @@
-$blue: #1a3377;
+$blue: #233980;
 $dark: #2d3436;
 $yellow: #e1b12c;
+$darker-yellow: #b18528;
 
 @font-face {
   font-family: 'Unica One';
@@ -23,5 +24,44 @@ $yellow: #e1b12c;
   @else { @warn "Breakpoint mixin supports: xs, sm, md, lg"; }
 }
 
+/**
+ * Dans cette feuille, il y aura toutes les fonctions/mixins
+ */
+
+@mixin box-shadow($params) {
+  -webkit-box-shadow: #{$params};
+  -moz-box-shadow:    #{$params};
+  box-shadow:         #{$params};
+}
+
+@mixin border-radius($params) {
+  -webkit-border-radius: #{$params};
+  -moz-border-radius:    #{$params};
+  border-radius:         #{$params};
+}
+
+@mixin scale($w, $h) {
+  -ms-transform:     scale($w, $h); /* IE 9 */
+  -webkit-transform: scale($w, $h); /* Safari */
+  transform:         scale($w, $h);
+}
+
+@mixin rotate($degrees) {
+  -ms-transform:     rotate(#{$degrees}); /* IE 9 */
+  -webkit-transform: rotate(#{$degrees}); /* Safari */
+  transform:         rotate(#{$degrees});
+}
+
 
 .height-300 {  height: 300px; }
+
+.color-white { color: white; }
+.color-yellow { color: $yellow; }
+.color-darker-yellow { color: $darker-yellow; }
+.color-dark { color: $dark; }
+.color-blue { color: $blue; }
+
+.background-color-yellow { background-color: $yellow; }
+.background-color-darker-yellow { background-color: $darker-yellow; }
+.background-color-dark   { background-color: $dark; }
+.background-color-blue   { background-color: $blue; }
