--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -2,32 +2,27 @@
 
 .main {
   height: 100vh;
-  overflow-y: scroll;
   font-family:"Unica One", "Roboto Slab", serif;
+
   .overlay {
+    margin-top: 150px;
     text-align: center;
     font-size:1.7rem;
-    overflow: hidden;
-
-    .darker-background {
-      width: 100%;
-      height: 100%;
-      background-color: $blue;
-    }
 
     .baseline {
-      margin-top: 250px;
-      padding: 50px 30px;
-      color: $yellow;
+      font-size: 2.7rem;
 
-      h1 {
-        color: white;
-        font-size: 3rem;
+      @include responsive(xs) {
+        font-size:1.8rem;
       }
     }
 
     img {
-      width: 100%;
+      width: 600px;
+
+      @include responsive(xs) {
+        width: 100%;
+      }
     }
   }
 
@@ -41,6 +36,10 @@
       border-right: solid $yellow 15px;
       text-align: right;
       padding: 10px;
+
+      @include responsive(xs) {
+        font-size:1.6rem;
+      }
     }
 
     .title-left {
@@ -54,6 +53,27 @@
     }
   }
 
+  #contacts {
+    border-top: solid $yellow 5px;
+    border-bottom: solid $darker-yellow 5px;
+    margin: 0 0 0 25px;
+    background-color: rgba(225, 177, 44, 0.34);
+    padding: 20px;
+    .contact {
+      margin-top: 15px;
+      margin-bottom: 15px;
+      h4 {
+        margin: 0;
+        color: $blue;
+      }
+      p {
+        font-weight: 600;
+        text-align: center;
+        border-top: solid $darker-yellow 2px;
+      }
+    }
+
+  }
 }
 
 #landing-page-content {
@@ -62,8 +82,43 @@
 
 .title {
   font-family:"Unica One", "Roboto Slab", serif;
+  margin-top: 15px;
+  margin-bottom: 15px;
   &.text-center {
     border-right: solid $yellow 15px;
     border-left: solid $yellow 15px;
+  }
+}
+
+.speaker {
+  min-height: 300px;
+  cursor: pointer;
+  padding: 45px !important;
+
+  .speaker-name {
+    font-family:"Unica One", "Roboto Slab", serif;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 20px;
+
+    a {
+      color: $dark;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .speaker-picture {
+    overflow: hidden;
+    border-radius:50%;
+
+    img {
+      width: 100%;
+      @include transition("transform ease .4s");
+      &:hover {
+        transform: scale(1.2, 1.2);
+      }
+    }
   }
 }
