--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -1,72 +1,182 @@
 @font-face {
   font-family: 'Unica One';
   src: url("../fonts/UnicaOne-Regular.ttf") format("truetype"); }
+/**
+ * Dans cette feuille, il y aura toutes les fonctions/mixins
+ */
 .height-300 {
   height: 300px; }
+
+.color-white {
+  color: white; }
+
+.color-yellow {
+  color: #e1b12c; }
+
+.color-darker-yellow {
+  color: #b18528; }
+
+.color-dark {
+  color: #2d3436; }
+
+.color-blue {
+  color: #233980; }
+
+.background-color-yellow {
+  background-color: #e1b12c; }
+
+.background-color-darker-yellow {
+  background-color: #b18528; }
+
+.background-color-dark {
+  background-color: #2d3436; }
+
+.background-color-blue {
+  background-color: #233980; }
 
 @font-face {
   font-family: 'Unica One';
   src: url("../fonts/UnicaOne-Regular.ttf") format("truetype"); }
+/**
+ * Dans cette feuille, il y aura toutes les fonctions/mixins
+ */
 .height-300 {
   height: 300px; }
 
+.color-white {
+  color: white; }
+
+.color-yellow {
+  color: #e1b12c; }
+
+.color-darker-yellow {
+  color: #b18528; }
+
+.color-dark {
+  color: #2d3436; }
+
+.color-blue {
+  color: #233980; }
+
+.background-color-yellow {
+  background-color: #e1b12c; }
+
+.background-color-darker-yellow {
+  background-color: #b18528; }
+
+.background-color-dark {
+  background-color: #2d3436; }
+
+.background-color-blue {
+  background-color: #233980; }
+
 .main {
   height: 100vh;
-  overflow-y: scroll;
   font-family: "Unica One", "Roboto Slab", serif; }
   .main .overlay {
+    margin-top: 150px;
     text-align: center;
-    font-size: 1.7rem;
-    overflow: hidden; }
-    .main .overlay .darker-background {
-      width: 100%;
-      height: 100%;
-      background-color: #1a3377; }
+    font-size: 1.7rem; }
     .main .overlay .baseline {
-      margin-top: 250px;
-      padding: 50px 30px;
-      color: #e1b12c; }
-      .main .overlay .baseline h1 {
-        color: white;
-        font-size: 3rem; }
+      font-size: 2.7rem; }
+      @media (max-width: 767px) {
+        .main .overlay .baseline {
+          font-size: 1.8rem; } }
     .main .overlay img {
-      width: 100%; }
+      width: 600px; }
+      @media (max-width: 767px) {
+        .main .overlay img {
+          width: 100%; } }
   .main .description {
     background-color: #fff; }
     .main .description .title {
       margin-top: 15px;
       font-size: 3rem;
-      color: #1a3377;
+      color: #233980;
       border-right: solid #e1b12c 15px;
       text-align: right;
       padding: 10px; }
+      @media (max-width: 767px) {
+        .main .description .title {
+          font-size: 1.6rem; } }
     .main .description .title-left {
       text-align: left;
       border-left: solid #e1b12c 15px;
       border-right: none; }
     .main .description .about {
       font-family: Lato, "Roboto Slab", Serif, serif; }
+  .main #contacts {
+    border-top: solid #e1b12c 5px;
+    border-bottom: solid #b18528 5px;
+    margin: 0 0 0 25px;
+    background-color: rgba(225, 177, 44, 0.34);
+    padding: 20px; }
+    .main #contacts .contact {
+      margin-top: 15px;
+      margin-bottom: 15px; }
+      .main #contacts .contact h4 {
+        margin: 0;
+        color: #233980; }
+      .main #contacts .contact p {
+        font-weight: 600;
+        text-align: center;
+        border-top: solid #b18528 2px; }
 
 #landing-page-content {
   font-family: Lato, "Roboto Slab", Roboto, serif; }
 
 .title {
-  font-family: "Unica One", "Roboto Slab", serif; }
+  font-family: "Unica One", "Roboto Slab", serif;
+  margin-top: 15px;
+  margin-bottom: 15px; }
   .title.text-center {
     border-right: solid #e1b12c 15px;
     border-left: solid #e1b12c 15px; }
+
+.speaker {
+  min-height: 300px;
+  cursor: pointer;
+  padding: 45px !important; }
+  .speaker .speaker-name {
+    font-family: "Unica One", "Roboto Slab", serif;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 20px; }
+    .speaker .speaker-name a {
+      color: #2d3436; }
+      .speaker .speaker-name a:hover {
+        text-decoration: none; }
+  .speaker .speaker-picture {
+    overflow: hidden;
+    border-radius: 50%; }
+    .speaker .speaker-picture img {
+      width: 100%;
+      -webkit-transition: transform ease .4s;
+      -moz-transition: transform ease .4s;
+      -o-transition: transform ease .4s;
+      transition: transform ease .4s; }
+      .speaker .speaker-picture img:hover {
+        transform: scale(1.2, 1.2); }
 
 body {
   background: url("../imgs/bg.jpg") repeat-x top left; }
 
 #sidebar {
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
   z-index: 3;
   font-family: 'Unica One', cursive !important; }
+  #sidebar > .position-fixed {
+    background-color: #ffbd33; }
+  #sidebar .list-group-item, #sidebar .list-group {
+    background-color: #ffbd33;
+    color: #2d3436 !important; }
   #sidebar .brand {
-    padding-top: 30px;
+    margin-top: 100px;
     padding-bottom: 30px; }
+    @media (max-width: 767px) {
+      #sidebar .brand {
+        margin-top: 20px; } }
     #sidebar .brand img {
       max-width: 80%; }
   #sidebar .list-group {
@@ -127,7 +237,7 @@ body {
     top: 0;
     right: 0;
     z-index: 999;
-    color: #1a3377;
+    color: #233980;
     background-color: #e1b12c;
     height: 48px;
     width: 56px;
