--- a/EduCode/assets/static/style.scss
+++ b/EduCode/assets/static/style.scss
@@ -5,7 +5,7 @@
 
 
 body {
-  background: url('../imgs/bg.jpg') repeat-x top left;
+  background: url('../imgs/bg.jpg') repeat-x top left fixed;
 }
 
 #sidebar {
