--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{{ '/plugins/bootstrap/bootstrap.min.css' | url }}">
     <link rel="stylesheet" href="{{ '/plugins/font-awesome-4.7.0/css/font-awesome.min.css' | url }}">
     <link rel="stylesheet" href="{{ '/plugins/aos/dist/aos.css' | url }}">
+    <link rel="stylesheet" href="{{ '/plugins/slick/slick.css' | url }}">
+    <link rel="stylesheet" href="{{ '/plugins/slick/slick-theme.css' | url }}">
 
     <link rel="icon" type="image/png" href="{{ '/imgs/educode-logo-transparent-cropped.png' | url }}" />
 
@@ -45,9 +47,11 @@
                     <a href="#anchor-contact" class="list-group-item d-inline-block collapsed">Contact</a>
                     <hr>
                     <div style="color: black;">
-                        <a style="color: black" href="#">FR</a> |
-                        <a style="color: black" href="#">NL</a> |
-                        <a style="color: black" href="#">EN</a>
+                        <a style="color: black" href="{{ '/fr' }}">FR</a> |
+                        <a style="color: black" href="{{ '/nl' }}">NL</a> |
+                        <a style="color: black" href="{{ '/es' }}">ES</a> |
+                        <a style="color: black" href="{{ '/de' }}">DE</a> |
+                        <a style="color: black" href="{{ '/' }}">EN</a>
                     </div>
                 </div>
             </div>
@@ -66,6 +70,7 @@
 <script src="{{ '/plugins/jquery.min.js' | url }}"></script>
 <script src="{{ '/plugins/bootstrap/bootstrap.min.js' | url }}"></script>
 <script src="{{ '/plugins/aos/dist/aos.js' | url }}"></script>
+<script src="{{ '/plugins/slick/slick.min.js' | url }}"></script>
 
 <script>
     $(function (e) {
