j'ai introduis quelques changements.

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -73,7 +73,7 @@
 <script src="{{ '/plugins/slick/slick.min.js' | url }}"></script>
 
 <script>
-    $(function (e) {
+    $(function () {
         var $root = $('html, body');
 
         $(document).on('click', 'a[href^="#anchor"]', function () {
