--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -137,17 +137,33 @@
       }
     }
   }
+  .speaker-picture-container {
+    width: 100%;
+    text-align: center;
 
-  .speaker-picture {
-    overflow: hidden;
-    border-radius:50%;
+    .speaker-picture {
+      display: inline-block;
+      overflow: hidden;
+      border-radius:50%;
+      width: 150px;
+      height: 150px;
 
-    img {
-      width: 100%;
-      @include transition("transform ease .4s");
-      &:hover {
-        transform: scale(1.2, 1.2);
+      @include responsive(xs) {
+        width: 100%;
+        height: 80px;
+      }
+      
+      background: no-repeat center center;
+      -webkit-background-size: cover;
+      background-size: cover;
+      img {
+        width: 100%;
+        @include transition("transform ease .4s");
+        &:hover {
+          transform: scale(1.2, 1.2);
+        }
       }
     }
   }
+
 }
