--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: 'Unica One';
   src: url("../fonts/UnicaOne-Regular.ttf") format("truetype"); }
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/Lato-Regular.ttf") format("truetype"); }
 /**
  * Dans cette feuille, il y aura toutes les fonctions/mixins
  */
@@ -49,6 +52,9 @@
 @font-face {
   font-family: 'Unica One';
   src: url("../fonts/UnicaOne-Regular.ttf") format("truetype"); }
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/Lato-Regular.ttf") format("truetype"); }
 /**
  * Dans cette feuille, il y aura toutes les fonctions/mixins
  */
@@ -190,17 +196,30 @@
       color: #2d3436; }
       .speaker .speaker-name a:hover {
         text-decoration: none; }
-  .speaker .speaker-picture {
-    overflow: hidden;
-    border-radius: 50%; }
-    .speaker .speaker-picture img {
-      width: 100%;
-      -webkit-transition: transform ease .4s;
-      -moz-transition: transform ease .4s;
-      -o-transition: transform ease .4s;
-      transition: transform ease .4s; }
-      .speaker .speaker-picture img:hover {
-        transform: scale(1.2, 1.2); }
+  .speaker .speaker-picture-container {
+    width: 100%;
+    text-align: center; }
+    .speaker .speaker-picture-container .speaker-picture {
+      display: inline-block;
+      overflow: hidden;
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      background: no-repeat center center;
+      -webkit-background-size: cover;
+      background-size: cover; }
+      @media (max-width: 767px) {
+        .speaker .speaker-picture-container .speaker-picture {
+          width: 100%;
+          height: 80px; } }
+      .speaker .speaker-picture-container .speaker-picture img {
+        width: 100%;
+        -webkit-transition: transform ease .4s;
+        -moz-transition: transform ease .4s;
+        -o-transition: transform ease .4s;
+        transition: transform ease .4s; }
+        .speaker .speaker-picture-container .speaker-picture img:hover {
+          transform: scale(1.2, 1.2); }
 
 body {
   background: url("../imgs/bg.jpg") repeat-x top left fixed; }
